--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "@types/react-transition-group": "^4.4.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
+    "querystring": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-google-recaptcha": "^2.1.0",
@@ -24,6 +25,7 @@
     "react-items-carousel": "^2.8.0",
     "react-swipeable": "^6.0.1",
     "react-transition-group": "^4.4.1",
+    "request": "^2.88.2",
     "type-insurance": "^1.2.4",
     "yup": "^0.32.8"
   },
